[tool.poetry]
name = "notebook-network-maximum-parallelism"
version = "0.1.0"
description = "Experiment modelling maximum parallelism of executors given a DAG of tasks."
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
ipycytoscape = "^1.3.3"
dash-cytoscape = {url = "https://github.com/plotly/dash-cytoscape/archive/master.zip"}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
invoke = "^2.2.0"
ruff = "^0.1.4"
black = {extras = ["jupyter"], version = "^23.10.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
